ready for deploy

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         />
         <div class="wiki-name">
           <h1 class="wiki-name__title">Wikipedia</h1>
-          <p class="wiki-name__detail">La enciclopedia libre</p>
+          <p class="wiki-name__detail">The Free Encyclopedia</p>
         </div>
       </section>
       <section class="languages_container">
@@ -134,7 +134,7 @@
             href="https://pt.wikipedia.org/wiki/Wikip%C3%A9dia:P%C3%A1gina_principal"
             class="languages__info"
           >
-            <strong class="languages__type">Português</strong>
+            <strong class="languages__type">English</strong>
             <div class="languages__description">
               <small class="languages__details"> 1 060 000+ </small>
               <small class="languages__details">artigos</small>
@@ -146,8 +146,8 @@
         <div class="search">
           <input class="search__input" type="text" />
           <select class="search__select">
-            <option value="ES">ES</option>
-            <option value="EN">EN</option>
+            <option value="ES">EN</option>
+            <option value="EN">ES</option>
             <option value="FR">FR</option>
           </select>
         </div>
@@ -160,7 +160,7 @@
               src="https://raw.githubusercontent.com/wikimedia/portals/0af0e35bce35b820104e3f7cbf30b186d5ed5041/dev/wikipedia.org/assets/img/sprite_assets/language-icon.svg"
               alt="Icono de idioma"
             />
-            <strong>Leer Wikipedia en tu idioma</strong>
+            <strong>Read Wikipedia in your language</strong>
             <img
               src="https://raw.githubusercontent.com/wikimedia/portals/0af0e35bce35b820104e3f7cbf30b186d5ed5041/dev/wikipedia.org/assets/img/sprite_assets/arrow-down-blue.svg"
               alt="Icono flecha hacia abajo"
@@ -176,9 +176,7 @@
               alt="Imagen Wikimedia"
             />
             <figcaption class="wikimedia__description">
-              Wikipedia es alojada por la Fundación Wikimedia, una organización
-              sin fines de lucro que también alberga una gama de otros
-              proyectos.
+              Wikipedia is hosted by the Wikimedia Foundation, a non-profit organization that also hosts a range of other projects.
             </figcaption>
           </figure>
           <section class="downland">
@@ -189,14 +187,12 @@
                 alt="Mini logo Wikipedia"
               />
               <figcaption class="downland__description">
-                Descargar Wikipedia para Android o iOS
+                Download Wikipedia  for Android or iOS
               </figcaption>
             </figure>
             <p class="downland__anuncio">
-              Guarda tus artículos favoritos para leerlos sin conexión,
-              sincroniza tus listas de lectura en varios dispositivos y
-              personaliza tu experiencia de lectura con la aplicación oficial de
-              Wikipedia.
+              Save your favorite articles to read offline, sync your reading lists across devices 
+              and customize your reading experience with the official Wikipedia app.
             </p>
             <div class="downland-apps">
               <img
@@ -222,7 +218,7 @@
               <div class="app__details">
                 <a class="app__title">Commons</a>
                 <p class="app__description">
-                  Fotos libremente utilizables y más
+                  Freely usable photos & more
                 </p>
               </div>
             </article>
@@ -234,8 +230,8 @@
                 />
               </figure>
               <div class="app__details">
-                <a class="app__title">Wikiviajes</a>
-                <p class="app__description">La guía de viajes libre</p>
+                <a class="app__title">Wikivoyage</a>
+                <p class="app__description">Free travel guide</p>
               </div>
             </article>
             <article class="app">
@@ -246,8 +242,8 @@
                 />
               </figure>
               <div class="app__details">
-                <a class="app__title">Wikcionario</a>
-                <p class="app__description">El diccionario libre</p>
+                <a class="app__title">Wiktionary</a>
+                <p class="app__description">Free dictionary</p>
               </div>
             </article>
             <article class="app">
@@ -258,20 +254,20 @@
                 />
               </figure>
               <div class="app__details">
-                <a class="app__title">Wikilibros</a>
-                <p class="app__description">Libros de contenido libre</p>
+                <a class="app__title">Wikibooks</a>
+                <p class="app__description">Free textbooks</p>
               </div>
             </article>
             <article class="app">
               <figure class="app__img">
                 <img
                   src="https://raw.githubusercontent.com/wikimedia/portals/master/dev/wikipedia.org/assets/img/Wikinews-logo_sister.png"
-                  alt="Imagen Wikinoticias"
+                  alt="Image Wikinews"
                 />
               </figure>
               <div class="app__details">
-                <a class="app__title">Wikinoticias</a>
-                <p class="app__description">La fuente de noticias libre</p>
+                <a class="app__title">Wikinews</a>
+                <p class="app__description">Free news source</p>
               </div>
             </article>
             <article class="app">
@@ -283,7 +279,7 @@
               </figure>
               <div class="app__details">
                 <a class="app__title">Wikidata</a>
-                <p class="app__description">Base de conocimiento libre</p>
+                <p class="app__description">Free knowledge base</p>
               </div>
             </article>
             <article class="app">
@@ -294,8 +290,8 @@
                 />
               </figure>
               <div class="app__details">
-                <a class="app__title">Wikiversidad</a>
-                <p class="app__description">Plataforma educativa libre</p>
+                <a class="app__title">Wikiversity</a>
+                <p class="app__description">Free course materials</p>
               </div>
             </article>
             <article class="app">
@@ -307,7 +303,7 @@
               </figure>
               <div class="app__details">
                 <a class="app__title">Wikiquote</a>
-                <p class="app__description">La colección de citas</p>
+                <p class="app__description">Free quote  compendium</p>
               </div>
             </article>
             <article class="app">
@@ -319,7 +315,7 @@
               </figure>
               <div class="app__details">
                 <a class="app__title">MediaWiki</a>
-                <p class="app__description">Aplicación wiki libre y abierta</p>
+                <p class="app__description">Free & open wiki application</p>
               </div>
             </article>
             <article class="app">
@@ -331,7 +327,7 @@
               </figure>
               <div class="app__details">
                 <a class="app__title">Wikisource</a>
-                <p class="app__description">La biblioteca libre</p>
+                <p class="app__description">Free library</p>
               </div>
             </article>
             <article class="app">
@@ -343,7 +339,7 @@
               </figure>
               <div class="app__details">
                 <a class="app__title">Wikispecies</a>
-                <p class="app__description">Directorio de especies libre</p>
+                <p class="app__description">Free species directory</p>
               </div>
             </article>
             <article class="app">
@@ -356,7 +352,7 @@
               <div class="app__details">
                 <a class="app__title">Meta-Wiki</a>
                 <p class="app__description">
-                  Coordinación y documentación comunitaria
+                  Community coordination & documentation
                 </p>
               </div>
             </article>
@@ -364,22 +360,23 @@
         </section>
         <footer>
           <p>
-            Esta página está disponible bajo la
+            
+            This page is available under the
             <a href="https://creativecommons.org/licenses/by-sa/3.0/">
-              licencia Creative Commons Atribución-CompartirIgual
+              Creative Commons Attribution-ShareAlike Lincense
             </a>
             •
             <a
               class="rules"
               href="https://meta.wikimedia.org/wiki/Terms_of_use/es"
             >
-              Términos de uso</a
+              Term of use</a
             >
             •
             <a
               class="rules"
               href="https://meta.wikimedia.org/wiki/Privacy_policy/es"
-              >Normativa de privacidad</a
+              >Privacy Policy</a
             >
           </p>
         </footer>
